upload all files

--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -250,7 +250,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Nickel</span><span class="badge">Bright / Hard</span></div>
           <h3 data-i18n-key="nickel_title">ชุบนิกเกิล (Nickel Plating)</h3>
-          <p data-i18n-key="nickel_desc">ทั้งแบบมีไฟและไม่ใช้ไฟ เพิ่มความทนสึกหรอ ทนกัดกร่อน และความแข็ง ผิวขาวเงา เหมาะเป็นชั้นรองก่อนชุบอื่น ใช้ได้ทั้งถังกลิ้งและถังแขวน เกาะเร็ว หนา เงา เข้าได้ถึงซอก</p>
+          <p data-i18n-key="nickel_desc">ทั้งแบบมีไฟฟ้าและไม่ใช้ไฟฟ้า เพิ่มความทนสึกหรอ ทนกัดกร่อน และความแข็ง ผิวขาวเงา เหมาะเป็นชั้นรองก่อนชุบอื่น ใช้ได้ทั้งถังกลิ้งและถังแขวน เกาะเร็ว หนา เงา เข้าได้ถึงซอก</p>
           <a class="more" href="nickelplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -272,7 +272,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Brass</span><span class="badge">Decorative</span></div>
           <h3 data-i18n-key="brass_title">ชุบทองเหลือง (Brass Plating)</h3>
-          <p data-i18n-key="brass_desc">สีทองสวยงาม นิยมกับงานจิวเวลรี่/ตกแต่ง มักเคลือบแลคเกอร์ทับเพื่อกันหมอง ใช้น้ำยาผสมทองแดง-สังกะสีเป็นหลัก</p>
+          <p data-i18n-key="brass_desc">สีทองสวยงาม ส่วนใหญ่นิยมใช้กับเครื่องประดับและงานตกแต่งเพื่อเพิ่มความงาม และมักมีการเคลือบแลคเกอร์ทับเพื่อป้องกันการหมองคล้ำและรักษาสีให้คงทน</p>
           <a class="more" href="brassplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -283,7 +283,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Lacquer</span><span class="badge">UV Resistant</span></div>
           <h3 data-i18n-key="lacquer_title">แลคเกอร์ไฟฟ้า (Electrolytic Lacquer)</h3>
-          <p data-i18n-key="lacquer_desc">กันกัดกร่อนสูง เลือกได้หลายเฉดสี ใช้เดี่ยวได้โดยไม่ต้องชุบโลหะอื่น ทน UV สีไม่ซีดแม้โดนแดดนาน</p>
+          <p data-i18n-key="lacquer_desc">กันกัดกร่อนสูง เลือกได้หลายเฉดสี ใช้เดี่ยวได้โดยไม่ต้องชุบโลหะอื่น ทนทานต่อรังสี UV ทำให้สีไม่ซีดจางเมื่อสัมผัสแสงแดดเป็นเวลานานโดยไม่ต้องอาศัยการชุบโลหะรองพื้น</p>
           <a class="more" href="electrophoreticlacquer/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -305,7 +305,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Tin</span><span class="badge">Bright</span></div>
           <h3 data-i18n-key="ti_title">น้ำยาชุบดีบุกเงา</h3>
-          <p data-i18n-key="ti_desc">เป็นการชุบดีบุกเงาที่มีความเงาดี การกระจายตัว ไม่ด้านดำ และเป็นฝ้ามัว</p>
+          <p data-i18n-key="ti_desc">น้ำยาชุบดีบุกเงาเป็นสารเคมีที่ใช้ในกระบวนการชุบโลหะด้วยไฟฟ้าเพื่อสร้างชั้นเคลือบดีบุกที่มีคุณสมบัติโดดเด่นในเรื่องความเงางาม การกระจายตัวที่ดีเยี่ยม และปราศจากรอยด่างดำหรือฝ้ามัวบนพื้นผิว ทำให้ได้ชิ้นงานที่ดูสวยงามและเรียบเนียนสม่ำเสมอ</p>
           <a class="more" href="tinplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -440,16 +440,16 @@
         zinc_title:"ชุบซิงค์ (Zinc Plating)",
         zinc_desc:"สร้างชั้นป้องกันสนิม เงางาม เกาะตัวไว เหมาะกับงานหลุมตื้น โครเมตมีหลายสีและทนสภาพแวดล้อม ใช้แพร่หลายในยานยนต์เพื่อคุ้มค่าและปกป้องชิ้นส่วนหลัก",
         nickel_title:"ชุบนิกเกิล (Nickel Plating)",
-        nickel_desc:"ทั้งแบบมีไฟและไม่ใช้ไฟ เพิ่มความทนสึกหรอ ทนกัดกร่อน และความแข็ง ผิวขาวเงา เหมาะเป็นชั้นรองก่อนชุบอื่น ใช้ได้ทั้งถังกลิ้งและถังแขวน เกาะเร็ว หนา เงา เข้าได้ถึงซอก",
+        nickel_desc:"ทั้งแบบมีไฟฟ้าและไม่ใช้ไฟฟ้า เพิ่มความทนสึกหรอ ทนกัดกร่อน และความแข็ง ผิวขาวเงา เหมาะเป็นชั้นรองก่อนชุบอื่น ใช้ได้ทั้งถังกลิ้งและถังแขวน เกาะเร็ว หนา เงา เข้าได้ถึงซอก",
         copper_title:"ชุบทองแดง (Copper Plating)",
         copper_desc:"เพิ่มความนำไฟฟ้า/ความร้อนและการยึดเกาะ เหมาะเป็นชั้นรองก่อนนิกเกิล/โครม ช่วยให้เงา ลดเวลาชุบนิกเกิล และเพิ่มการต้านการกัดกร่อนเมื่อเคลือบโครมทับ",
         brass_title:"ชุบทองเหลือง (Brass Plating)",
-        brass_desc:"สีทองสวยงาม นิยมกับงานจิวเวลรี่/ตกแต่ง มักเคลือบแลคเกอร์ทับเพื่อกันหมอง ใช้น้ำยาผสมทองแดง-สังกะสีเป็นหลัก",
+        brass_desc:"สีทองสวยงาม ส่วนใหญ่นิยมใช้กับเครื่องประดับและงานตกแต่งเพื่อเพิ่มความงาม และมักมีการเคลือบแลคเกอร์ทับเพื่อป้องกันการหมองคล้ำและรักษาสีให้คงทน",
         lacquer_title:"แลคเกอร์ไฟฟ้า (Electrolytic Lacquer)",
-        lacquer_desc:"กันกัดกร่อนสูง เลือกได้หลายเฉดสี ใช้เดี่ยวได้โดยไม่ต้องชุบโลหะอื่น ทน UV สีไม่ซีดแม้โดนแดดนาน",
+        lacquer_desc:"กันกัดกร่อนสูง เลือกได้หลายเฉดสี ใช้เดี่ยวได้โดยไม่ต้องชุบโลหะอื่น ทนทานต่อรังสี UV ทำให้สีไม่ซีดจางเมื่อสัมผัสแสงแดดเป็นเวลานานโดยไม่ต้องอาศัยการชุบโลหะรองพื้น",
         wb_title:"ไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์",
         ti_title: "น้ำยาชุบดีบุกเงา",
-        ti_desc: "เป็นการชุบดีบุกเงาที่มีความเงาดี การกระจายตัว ไม่ด้านดำ และเป็นฝ้ามัว",
+        ti_desc: "น้ำยาชุบดีบุกเงาเป็นสารเคมีที่ใช้ในกระบวนการชุบโลหะด้วยไฟฟ้าเพื่อสร้างชั้นเคลือบดีบุกที่มีคุณสมบัติโดดเด่นในเรื่องความเงางาม การกระจายตัวที่ดีเยี่ยม และปราศจากรอยด่างดำหรือฝ้ามัวบนพื้นผิว ทำให้ได้ชิ้นงานที่ดูสวยงามและเรียบเนียนสม่ำเสมอ",
         view_details:"ดูรายละเอียด →",
         footer_products:"หมวดผลิตภัณฑ์",
         footer_contact:"ติดต่อเรา",
@@ -477,11 +477,11 @@
         brass_title:"Brass Plating",
         brass_desc:"Attractive gold-like tone for jewelry/decorative parts; typically finished with lacquer to prevent tarnish. Copper-zinc baths.",
         lacquer_title:"Electrolytic Lacquer",
-        lacquer_desc:"High corrosion resistance in various shades; can be applied standalone. Excellent UV resistance for long-term color stability.",
+        lacquer_desc:"High corrosion resistance in various shades; can be applied standalone. Excellent UV resistance. The color won't fade even with prolonged sun exposure, without needing a preliminary metal plating layer.",
         wb_title:"Cyanide-Free White Bronze",
         ti_title: "Bright tin plating",
         wb_desc:"Cyanide-free formula reduces environmental/safety risk. Silver-white bright finish with excellent distribution, easy control, lower treatment cost; suitable for rack/barrel and many substrates.",
-        ti_desc: "This is a bright tin plating solution that provides a high-gloss finish with excellent deposit distribution. It is free from dullness, blackening, or haziness",
+        ti_desc: "A bright tin plating solution is a chemical used in electroplating to create a tin coating with exceptional brightness. It offers excellent throwing power, ensuring uniform plating coverage without producing dull, dark, or cloudy spots, resulting in a consistently smooth and aesthetically pleasing finish.",
         view_details:"View Details →",
         footer_products:"Products",
         footer_contact:"Contact Us",
