upload all files

--- a/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
@@ -342,7 +342,7 @@
             <li data-i18n-key="makeup_s3">ค่อย ๆ เติมสารตามอัตราส่วนให้ละลายหมด ปล่อยเย็น</li>
             <li data-i18n-key="makeup_s4">เติม Zinc Purifier (PURISOL) 4 ซีซี/ลิตร คน พักตกตะกอนข้ามคืน</li>
             <li data-i18n-key="makeup_s5">กรองและปรับระดับน้ำ</li>
-            <li data-i18n-key="makeup_s6">เติม 111B ทีละน้อยตามต้องการ</li>
+            <li data-i18n-key="makeup_s6">เติม 111B ทีละน้อยจนถึง 1 ลิตร ต่อบ่อ 1,000 ลิตร</li>
           </ul>
         </div>
       </section>
@@ -470,7 +470,7 @@
 
         intro_h:"ภาพรวม & หลักการทำงาน",
         intro_p1:"<strong>การชุบซิงค์ไซยาไนด์</strong> คือกระบวนการชุบโลหะด้วยไฟฟ้าที่ยึดหลักการใช้สารละลายซิงค์ไซยาไนด์และโซเดียมไซยาไนด์ เพื่อเคลือบสังกะสีบนผิวโลหะ เช่น เหล็ก ให้เกิดชั้นสังกะสีบาง ๆ ที่ป้องกันสนิมและรองรับการทำสี/โครเมตต่อไป",
-        intro_p2:"หลักการทำงาน: ชิ้นงานต่อขั้วลบ (Cathode) และแท่งสังกะสีต่อขั้วบวก (Anode) จุ่มในอิเล็กโทรไลต์ เมื่อจ่ายกระแสตรง (DC) ไอออน Zn²⁺ จะเคลื่อนไปยังผิวชิ้นงาน รับอิเล็กตรอนและตกตะกอนเป็นสังกะสี ขณะที่แอโนดสังกะสีละลายเพื่อชดเชยโลหะในบ่อ",
+        intro_p2:"<strong>หลักการทำงาน:</strong> ชิ้นงานต่อขั้วลบ (Cathode) และแท่งสังกะสีต่อขั้วบวก (Anode) จุ่มในอิเล็กโทรไลต์ เมื่อจ่ายกระแสตรง (DC) ไอออน Zn²⁺ จะเคลื่อนไปยังผิวชิ้นงาน รับอิเล็กตรอนและตกตะกอนเป็นสังกะสี ขณะที่แอโนดสังกะสีละลายเพื่อชดเชยโลหะในบ่อ",
 
         features_h:"จุดเด่น 6 ข้อ",
         features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
@@ -510,7 +510,7 @@
         makeup_s3:"ค่อย ๆ เติมสารตามอัตราส่วนให้ละลายหมด ปล่อยเย็น",
         makeup_s4:"เติม Zinc Purifier (PURISOL) 4 ซีซี/ลิตร คน พักตกตะกอนข้ามคืน",
         makeup_s5:"กรองและปรับระดับน้ำ",
-        makeup_s6:"เติม 111B ทีละน้อยตามต้องการ",
+        makeup_s6:"เติม 111B ทีละน้อยจนถึง 1 ลิตร ต่อบ่อ 1,000 ลิตร",
 
         /* Maintenance */
         maint_h:"การบำรุงรักษา & การเติม",
@@ -602,7 +602,7 @@
         makeup_s3:"Charge chemicals gradually to dissolve completely; allow to cool.",
         makeup_s4:"Add Zinc Purifier (PURISOL) 4 cc/L, mix, and settle overnight.",
         makeup_s5:"Filter and adjust level.",
-        makeup_s6:"Add 111B gradually to demand.",
+        makeup_s6:"Add 111B gradually until it reaches 1 liter per 1,000-liter tank.",
 
         /* Maintenance */
         maint_h:"Maintenance & Additions",
