upload all files

--- a/products/platingcoating/brassplating/troubleshootingbrass/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrass/index.html
@@ -239,8 +239,8 @@
 
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">Feature cards / Icon card grid</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ</p>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
           <article class="features__item">
@@ -500,8 +500,8 @@
         intro_p1:"ทองเหลืองไซยาไนด์เป็นกระบวนการชุบไฟฟ้าที่สร้างฟิล์มทองเหลืองเงางาม เรียบ และทนทาน เหมาะกับงานที่ต้องการผิวคุณภาพสูง เช่น ชิ้นส่วนโลหะตกแต่ง จิวเวลรี่ และอิเล็กทรอนิกส์",
         intro_p2:"แม้ให้คุณภาพผิวสูง แต่ไซยาไนด์เป็นสารพิษ ต้องมีมาตรการ EHS เข้มงวด ใช้ PPE และบำบัดของเสียถูกต้องตามกฎหมายเพื่อลดความเสี่ยงต่อผู้ปฏิบัติงานและสิ่งแวดล้อม",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ",
+        features_h:"จุดเด่นของน้ำยา",
+        features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t:"ปรับโทนสีได้กว้าง",
         feat_1_d:"เหลืองอ่อน → ทองแดงแดง คุมด้วยอุณหภูมิ/กระแส/อัตราส่วน <strong>Cu:Zn</strong>",
         feat_2_t:"ผิวเรียบสม่ำเสมอ",
@@ -636,8 +636,8 @@
         intro_p1:"Cyanide brass electroplating produces bright, smooth, durable brass films, ideal for high-quality decorative parts, jewelry, and electronics.",
         intro_p2:"Because cyanide is toxic, strict EHS controls, proper PPE, and compliant waste treatment are mandatory to protect workers and the environment.",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"6 highlights — 3×2 desktop / 2×3 tablet / 1×6 mobile",
+        features_h:"Key features of the solution",
+        features_lead:"A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t:"Wide tone control",
         feat_1_d:"Pale yellow → red-brass via temperature/current and <strong>Cu:Zn</strong> ratio.",
         feat_2_t:"Smooth, uniform finish",
