--- a/products/platingcoating/zincplating/index.html
+++ b/products/platingcoating/zincplating/index.html
@@ -381,7 +381,7 @@ body.no-scroll{ position:fixed; width:100% }
           <div class="body">
             <div class="badges"><span class="badge">Acid (Ammonium)</span><span class="badge">High Coverage</span></div>
             <h3 data-i18n-key="acid_title">Ammonium Acid Zinc Plating</h3>
-            <p data-i18n-key="acid_desc">กระจายผิวดีแม้พื้นที่กระแสต่ำ/ซอกลึก เบสและไบร์ทเทนเนอร์ละลายง่าย ล้างออกง่าย ช่วยให้โครเมตยึดติดดี ให้ผิวเงาและความหนาสม่ำเสมอ เหมาะกับถังกลิ้ง/ถังแขวน</p>
+            <p data-i18n-key="acid_desc">ให้ผิวชิ้นงานเงางามและสม่ำเสมอทั่วทั้งชิ้น แม้ในซอกลึกที่เข้าถึงยาก สารเคมีที่ใช้ละลายน้ำและล้างออกได้ง่าย ช่วยให้การเคลือบโครเมตยึดเกาะได้ดี และเหมาะสำหรับทั้งแบบถังกลิ้งและถังแขวน</p>
             <a class="more" href="troubleshootingacidzinc/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
@@ -556,7 +556,7 @@ body.no-scroll{ position:fixed; width:100% }
         cya_title:"Cyanide Zinc Plating Solution",
         cya_desc:"การกระจายผิวยอดเยี่ยม คุมง่าย ทนต่อการปนเปื้อนน้ำมัน เงาสูง ทำงานได้ในช่วงความหนาแน่นกระแสกว้าง และเข้ากันได้กับโครเมตทุกเฉด เหมาะทั้งถังแขวนและถังกลิ้ง",
         acid_title:"Ammonium Acid Zinc Plating",
-        acid_desc:"กระจายผิวดีแม้พื้นที่กระแสต่ำ/ซอกลึก เบสและไบร์ทเทนเนอร์ละลายง่าย ล้างออกง่าย ช่วยให้โครเมตยึดติดดี ให้ผิวเงาและความหนาสม่ำเสมอ เหมาะกับถังกลิ้ง/ถังแขวน",
+        acid_desc:"ให้ผิวชิ้นงานเงางามและสม่ำเสมอทั่วทั้งชิ้น แม้ในซอกลึกที่เข้าถึงยาก สารเคมีที่ใช้ละลายน้ำและล้างออกได้ง่าย ช่วยให้การเคลือบโครเมตยึดเกาะได้ดี และเหมาะสำหรับทั้งแบบถังกลิ้งและถังแขวน",
         ncn_title:"Cyanide-Free Zinc Plating",
         ncn_desc:"ปลอดไซยาไนด์ ลดความเสี่ยงต่อคนและสิ่งแวดล้อม เงาสูง คุมง่าย กระจายผิวดี ใช้ได้กับโซดาไฟและโพแทสเซียม และชุบได้โดยตรงบนเหล็ก เหล็กผสมตะกั่ว หรือซิงค์ไดคาสต์",
         btn_details:"ดูรายละเอียด →",
@@ -578,7 +578,7 @@ body.no-scroll{ position:fixed; width:100% }
         cya_title:"Cyanide Zinc Plating Solution",
         cya_desc:"Excellent distribution, easy control, oil-contamination tolerant, high gloss, wide current density window; compatible with all chromate colors.",
         acid_title:"Ammonium Acid Zinc Plating",
-        acid_desc:"Strong coverage into low-current areas and recesses; base/brightener dissolve and rinse easily; promotes chromate adhesion; suitable for rack/barrel.",
+        acid_desc:"It provides a shiny and uniform finish, even in hard-to-reach recesses. The chemicals are easily soluble and rinse off, which helps the chromate coating adhere well. This process is suitable for both barrel and rack plating.",
         ncn_title:"Cyanide-Free Zinc Plating",
         ncn_desc:"Cyanide-free for safer operations and environment; high gloss, easy control, good distribution; works with NaOH/KOH; plates directly on steel, leaded steel, and die-cast zinc.",
         btn_details:"View details →",
