--- a/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
@@ -233,13 +233,13 @@
           <p data-i18n-key="intro_p1"><strong>ซิงค์กรดแอมโมเนีย</strong> และ <strong>ซิงค์กรดโพแทสเซียม</strong> เป็นประเภทของ Acid Zinc ที่ต่างกันที่ตัวนำไฟฟ้าในสารละลาย (chloride salt). ระบบแอมโมเนียใช้แอมโมเนียมคลอไรด์ (NH<sub>4</sub>Cl) ส่วนระบบโพแทสเซียมใช้โพแทสเซียมคลอไรด์ (KCl).</p>
         </div>
         <div class="content">
-          <p class="lead" data-i18n-key="intro_am_h">ซิงค์กรดแอมโมเนีย (Ammonium Chloride)</p>
+          <h2 class="lead" data-i18n-key="intro_am_h">ซิงค์กรดแอมโมเนีย (Ammonium Chloride)</h2>
           <ul>
             <li data-i18n-key="intro_am_b1">ชุบได้ที่ความหนาแน่นกระแสสูง (HCD) ได้ดี</li>
             <li data-i18n-key="intro_am_b2">Throwing Power โดยรวมดีกว่าแบบโพแทสเซียม</li>
             <li data-i18n-key="intro_am_b3">ข้อควรระวังด้านสิ่งแวดล้อม: แอมโมเนียระเหยง่าย มีกลิ่น และกระทบการบำบัดน้ำเสีย</li>
           </ul>
-          <p class="lead" data-i18n-key="intro_k_h">ซิงค์กรดโพแทสเซียม (Potassium Chloride)</p>
+          <h2 class="lead" data-i18n-key="intro_k_h">ซิงค์กรดโพแทสเซียม (Potassium Chloride)</h2>
           <ul>
             <li data-i18n-key="intro_k_b1">เป็นมิตรต่อสิ่งแวดล้อมกว่า: ไม่มีแอมโมเนีย ลดกลิ่นฉุน</li>
             <li data-i18n-key="intro_k_b2">บำบัดน้ำเสียง่าย ลดภาระระบบ</li>
@@ -251,8 +251,8 @@
 
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-        <h2 id="features-h" class="section" data-i18n-key="features_h">Feature cards / Icon card grid</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ</p>
+        <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
           <article class="features__item">
@@ -303,7 +303,7 @@
 
       <!-- PART 1 -->
       <section id="usage" class="reveal section-block" aria-labelledby="usage-h">
-        <h2 id="usage-h" class="section" data-i18n-key="usage_h">PART 1 — วิธีการใช้น้ำยา</h2>
+        <h2 id="usage-h" class="section" data-i18n-key="usage_h">วิธีการใช้น้ำยา</h2>
         <div class="table">
           <table>
             <thead>
@@ -375,7 +375,7 @@
 
       <!-- PART 2 -->
       <section id="makeup" class="reveal section-block" aria-labelledby="makeup-h">
-        <h2 id="makeup-h" class="section" data-i18n-key="makeup_h">PART 2 — การผสมน้ำยาบ่อใหม่</h2>
+        <h2 id="makeup-h" class="section" data-i18n-key="makeup_h">การผสมน้ำยาบ่อใหม่</h2>
         <div class="table">
           <table>
             <thead>
@@ -540,8 +540,8 @@
         intro_k_b3:"คุณภาพผิวเงา/ทนทานดี เหมาะการใช้งานสมัยใหม่",
         intro_k_b4:"การกระจายอาจด้อยกว่าแบบแอมโมเนียบางกรณี แต่แลกด้วยความปลอดภัย",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"6 ไฮไลต์หลัก — 3×2 เดสก์ท็อป / 2×3 แท็บเล็ต / 1×6 มือถือ",
+        features_h:"จุดเด่นของน้ำยา",
+        features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t:"เงาสูงทั่วช่วงกระแส", feat_1_d:"ตั้งแต่ LCD ถึง HCD ได้ผิวเงาสม่ำเสมอ",
         feat_2_t:"เข้าซอกสูง (LCD)", feat_2_d:"Throwing Power ดี ครอบคลุมพื้นที่กระแสต่ำ",
         feat_3_t:"ละลายง่าย ไม่ใช้ solvent", feat_3_d:"ตัวยาพื้น/ยาเงาไม่แยกชั้นเมื่อบ่อร้อน",
@@ -551,7 +551,7 @@
 
         system_h:"ระบบ ACIDZINC 99", system_p1:"ออกแบบเพื่อผิวสังกะสีเงาสูง ลื่นไหล และเข้าถึงบริเวณกระแสต่ำได้ดี เหมาะทั้งถังแขวน (rack) และถังกลิ้ง (barrel) พร้อมความคุ้มค่าในการเดินระบบ",
 
-        usage_h:"PART 1 — วิธีการใช้น้ำยา",
+        usage_h:"วิธีการใช้น้ำยา",
         usage_th_type:"ประเภทการชุบ", usage_th_rack:"ถังแขวน", usage_th_barrel:"ถังกลิ้ง",
         usage_row_m:"ACIDZINC 99 M (ยาพื้น)", usage_row_r:"ACIDZINC 99 R (ยาเงา)",
 
@@ -565,7 +565,7 @@
 
         ratio_h:"อัตราส่วนของน้ำยา", ratio_th_comp:"องค์ประกอบ", ratio_th_rack:"ถังแขวน", ratio_th_barrel:"ถังกลิ้ง", ratio_zn:"โลหะซิงค์ (Zn)", ratio_cl:"คลอไรด์ (Cl⁻)",
 
-        makeup_h:"PART 2 — การผสมน้ำยาบ่อใหม่", makeup_th_chem:"สารเคมี", makeup_th_rack:"ถังแขวน", makeup_th_barrel:"ถังกลิ้ง",
+        makeup_h:"การผสมน้ำยาบ่อใหม่", makeup_th_chem:"สารเคมี", makeup_th_rack:"ถังแขวน", makeup_th_barrel:"ถังกลิ้ง",
         mk_zncl2:"ซิงค์คลอไรด์", mk_nh4cl:"แอมโมเนียมคลอไรด์", mk_m:"ยาพื้นซิงค์กรดแอมโมเนีย (ACIDZINC 99 M)", mk_r:"ยาเงาซิงค์กรดแอมโมเนีย (ACIDZINC 99 R)",
 
         add_h:"การปรับเติมน้ำยาพื้น–ยาเงา", add_lead:"ทุก ๆ 1,000 Ah ให้เติมโดยประมาณ (อ้างอิงจาก Hull‑cell และผลผลิตจริง)",
@@ -605,8 +605,8 @@
         intro_k_b3:"Delivers bright, durable deposits for modern lines",
         intro_k_b4:"Throw may be lower than ammonium in some cases, but safety/ESG advantages are significant",
 
-        features_h:"Feature cards / Icon card grid",
-        features_lead:"6 highlights — 3×2 desktop / 2×3 tablet / 1×6 mobile",
+        features_h:"Key features of the solution",
+        features_lead:"A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t:"High gloss across current range", feat_1_d:"Uniform brightness from LCD to HCD",
         feat_2_t:"Strong LCD coverage", feat_2_d:"Good throwing power into recesses",
         feat_3_t:"Easy to dissolve; solvent‑free", feat_3_d:"Carrier/brightener stay homogeneous even at elevated temp",
