--- a/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
@@ -234,7 +234,7 @@
 
     <!-- Features (Icon card grid) -->
     <section id="features" class="reveal section-block features" aria-labelledby="features-h">
-      <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่น 6 ข้อ</h2>
+      <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
       <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
       <div class="features__grid">
@@ -463,7 +463,7 @@
 
         toc_title:"สารบัญ",
         toc_intro:"ภาพรวม & หลักการทำงาน",
-        toc_features:"จุดเด่น 6 ข้อ",
+        toc_features:"จุดเด่นของน้ำยา",
         toc_comp:"ส่วนผสมน้ำยา & ความเข้มข้น",
         toc_makeup:"การเตรียมบ่อ (Make-up)",
         toc_trouble:"แนวทางแก้ปัญหา",
@@ -472,7 +472,7 @@
         intro_p1:"<strong>การชุบซิงค์ไซยาไนด์</strong> คือกระบวนการชุบโลหะด้วยไฟฟ้าที่ยึดหลักการใช้สารละลายซิงค์ไซยาไนด์และโซเดียมไซยาไนด์ เพื่อเคลือบสังกะสีบนผิวโลหะ เช่น เหล็ก ให้เกิดชั้นสังกะสีบาง ๆ ที่ป้องกันสนิมและรองรับการทำสี/โครเมตต่อไป",
         intro_p2:"<strong>หลักการทำงาน:</strong> ชิ้นงานต่อขั้วลบ (Cathode) และแท่งสังกะสีต่อขั้วบวก (Anode) จุ่มในอิเล็กโทรไลต์ เมื่อจ่ายกระแสตรง (DC) ไอออน Zn²⁺ จะเคลื่อนไปยังผิวชิ้นงาน รับอิเล็กตรอนและตกตะกอนเป็นสังกะสี ขณะที่แอโนดสังกะสีละลายเพื่อชดเชยโลหะในบ่อ",
 
-        features_h:"จุดเด่น 6 ข้อ",
+        features_h:"จุดเด่นของน้ำยา",
         features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t:"เงาสูงทั่วช่วงกระแส",
         feat_1_d:"ตั้งแต่ LCD ถึง HCD ได้ผิวเงาสม่ำเสมอ ลดต่างโทนระหว่างขอบกับร่องลึก",
@@ -562,10 +562,10 @@
 
         intro_h:"Overview & Principle",
         intro_p1:"<strong>Cyanide zinc plating</strong> is an electrolytic process using zinc cyanide and sodium cyanide electrolytes to deposit a thin protective zinc layer on metals (e.g., steel), improving corrosion resistance and enabling subsequent paint/chromate.",
-        intro_p2:"Principle: The workpiece is the cathode and zinc is the anode in the electrolyte. Under DC current, Zn²⁺ ions migrate to the surface, gain electrons, and deposit as zinc while the zinc anode dissolves to replenish metal in the bath.",
+        intro_p2:"<strong>Principle:</strong> The workpiece is the cathode and zinc is the anode in the electrolyte. Under DC current, Zn²⁺ ions migrate to the surface, gain electrons, and deposit as zinc while the zinc anode dissolves to replenish metal in the bath.",
 
-        features_h:"Six Highlights",
-        features_lead:"Shop-floor essentials—deposit quality, bath robustness, and post-treatment readiness.",
+        features_h:"Key features of the solution",
+        features_lead:"A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t:"High gloss across current range",
         feat_1_d:"From <strong>LCD to HCD</strong>, deposits remain uniformly bright with reduced edge-to-recess tone difference.",
         feat_2_t:"Low organics",
