--- a/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
@@ -275,7 +275,7 @@
       <!-- Features (Icon card grid) -->
       <section id="features" class="reveal section-block features" aria-labelledby="features-h">
         <h2 id="features-h" class="section" data-i18n-key="features_h">จุดเด่นของน้ำยา</h2>
-        <p class="lead" data-i18n-key="features_lead">6 ไฮไลต์หลัก</p>
+        <p class="lead" data-i18n-key="features_lead">สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป</p>
 
         <div class="features__grid">
           <article class="features__item">
@@ -471,7 +471,7 @@
         hero_title:"ชุบซิงค์แบบไม่ใช้ไซยาไนด์ (Cyanide-free Zinc Plating)",
         hero_tagline:"ปลอดภัยต่อผู้ปฏิบัติงาน/สิ่งแวดล้อม พร้อมสรุปประเภทกรด–ด่าง สูตรเดินบ่อ พารามิเตอร์ ฟีเจอร์ 6 ข้อ การเติมบ่อ และแนวทางแก้ปัญหา",
 
-        toc_title:"สารบัญ", toc_intro:"ภาพรวม & ประเภทสารละลาย", toc_features:"จุดเด่น 6 ข้อ",
+        toc_title:"สารบัญ", toc_intro:"ภาพรวม & ประเภทสารละลาย", toc_features:"จุดเด่นของน้ำยา",
         toc_conditions:"ส่วนผสม & สภาวะทำงาน", toc_additions:"การเติมบ่อ & บำรุงรักษา", toc_troubleshooting:"แนวทางแก้ปัญหา",
 
         intro_h:"ภาพรวม",
@@ -493,7 +493,7 @@
         row_alk_cons:"❌ เงาน้อยกว่าแบบกรด; การล้างทำความสะอาดอาจทำได้ยาก",
 
         features_h:"จุดเด่นของน้ำยา",
-        features_lead:"6 ไฮไลต์หลัก",
+        features_lead:"สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
         feat_1_t:"เงาสูงทั่วช่วงกระแส", feat_1_d:"ตั้งแต่ <strong>LCD ถึง HCD</strong> ได้ผิวเงาสม่ำเสมอ ลดความต่างโทน",
         feat_2_t:"กระจายผิวสม่ำเสมอ",  feat_2_d:"Throwing power สูง ครอบคลุมซอก/รู/ร่องลึก",
         feat_3_t:"ประสิทธิภาพกระแสสูง", feat_3_d:"ทำงานได้ทั้งกระแสต่ำ–สูง ลดเวลาไซเคิล",
@@ -561,7 +561,7 @@
         row_alk_cons:"❌ Lower gloss vs acid; rinsing can be challenging",
 
         features_h:"Key features of the solution",
-        features_lead:"6 highlights",
+        features_lead:"A summary of the key characteristics for a plating line, including surface quality, stability, and readiness for the next process.",
         feat_1_t:"High gloss across current range", feat_1_d:"Uniform from <strong>LCD to HCD</strong> with minimized tone difference",
         feat_2_t:"Uniform coverage",                feat_2_d:"High throwing power into recesses/holes",
         feat_3_t:"High-current capable",            feat_3_d:"Performs at low/high CD; shortens cycle time",
